zoom fixes